fix roles overflowing on homepage

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -550,7 +550,11 @@ li {
     }
 
     .card {
-        max-width: 30%;
+        max-width: 35%;
+    }
+
+    .card .roles {
+        font-size: 0.7em;
     }
 
     #toolbar ul li button:not(#home-button) {
